@@ -425,11 +425,11 @@ def svn2rpm(pkgdirurl, rev=None, size=None, submit=False,
         releases.append(release)
         prevrevision = relrevision
             
-    # look for commits that have been not submited (released) yet
-    # this is done by getting all log entries newer (revision larger)
-    # than releaseslog[0] (in the case it exists)
-    if releaseslog:
-        latest_revision = releaseslog[0].revision
+    # look for commits that have been not submitted (released) yet
+    # this is done by getting all log entries newer (greater revision no.)
+    # than releasesdata[-1] (in the case it exists)
+    if releasesdata:
+        latest_revision = releasesdata[-1][0] # the latest copied rev
     else:
         latest_revision = 0
     notsubmitted = [entry for entry in currentlog 
